<resources>
    <string name="app_name">Madrid Trip Planner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Madrid Trip Planner</string>
    <string name="nav_header_subtitle">jorgemartinalvarado@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_route">Route</string>
    <string name="menu_line_info">Bus lines</string>
    <string name="menu_favorites">My favorites</string>
    <string name="menu_refresh_data">Refresh data</string>
    <string name="menu_about_app">About the app</string>

    <string name="fragment_bus_line_detail">Line info</string>

    <string name="common_accept">Accept</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_retry">Retry</string>
    <string name="common_loading_message">Getting data</string>

    <string name="error_title">Error</string>
    <string name="error_no_connectivity_message">Connection not found. Please, try again later.</string>

    <string name="main_error_data_not_updated">Connection not found.\nMadrid Trip Planner can work offline but data is not up to date. Keep in mind that changes could have been made and information could be imprecise.</string>

    <string name="message_check_info">Validating stored information</string>
    <string name="message_downloading_info">Downloading info</string>

    <string name="about_version">Version %1$s</string>
    <string name="about_since_release_date">Since 2020</string>
    <string name="about_emt_mention">Powered by EMTOpenData (%1$s)</string>

    <string name="refresh_data_last_update">Last update at</string>
    <string name="refresh_application_data">Refresh application data</string>

    <string name="bus_lines_search">Search</string>
    <string name="bus_lines_search_hint">Search by line, header or destiny</string>
    <string name="bus_lines_empty_lines_message">No bus lines found</string>

    <string name="bus_lines_item_from">From</string>
    <string name="bus_lines_item_to">To</string>
    <string name="bus_lines_item_mark_favorite">Mark as favorite</string>
</resources>