<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_route"
            android:icon="@drawable/ic_menu_route"
            android:title="@string/menu_route" />
        <item
            android:id="@+id/nav_line_info"
            android:icon="@drawable/ic_menu_line_info"
            android:title="@string/menu_line_info" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_favorites"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_refresh_data"
            android:icon="@drawable/ic_menu_refresh_data"
            android:title="@string/menu_refresh_data" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about_app" />
    </group>
</menu>