<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_route">

    <fragment
        android:id="@+id/nav_route"
        android:name="com.jmartinal.madridtripplanner.application.ui.route.RouteFragment"
        android:label="@string/menu_route"
        tools:layout="@layout/fragment_route" />

    <fragment
        android:id="@+id/nav_line_info"
        android:name="com.jmartinal.madridtripplanner.application.ui.lineinfo.LineInfoFragment"
        android:label="@string/menu_line_info"
        tools:layout="@layout/fragment_line_info" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.jmartinal.madridtripplanner.application.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.jmartinal.madridtripplanner.application.ui.about.AboutFragment"
        android:label="@string/menu_about_app"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_refresh_data"
        android:name="com.jmartinal.madridtripplanner.application.ui.refreshdata.RefreshDataFragment"
        android:label="@string/menu_refresh_data"
        tools:layout="@layout/fragment_refresh_data" />
</navigation>